# download-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.py  config.json  download_manager.py  install.bat  pyproject.toml  settings_ui.py
.github/workflows/: publish.yml
