[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "download-classifier"
version = "1.0.0"
description = "Windows 自动下载文件分类管理工具 - 智能识别文件类型并自动整理"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "fanAa8"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "watchdog>=3.0.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/fanAa8/download-manager"
Repository = "https://github.com/fanAa8/download-manager"
Issues = "https://github.com/fanAa8/download-manager/issues"
Releases = "https://github.com/fanAa8/download-manager/releases"

[project.scripts]
download-manager = "download_manager:main"